--- a/App Search with Google/Base.lproj/Main.storyboard
+++ b/App Search with Google/Base.lproj/Main.storyboard
@@ -38,20 +38,41 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rW3-Bo-R5m">
-                                            <rect key="frame" x="8" y="10" width="584" height="21"/>
+                                            <rect key="frame" x="8" y="10" width="498" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" relation="lessThanOrEqual" constant="498" id="xDA-Xz-1G4"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="25469 ratings" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nT9-1u-JUn">
+                                            <rect key="frame" x="8" y="29" width="76" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="$4.99" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QUj-xi-VHf">
+                                            <rect key="frame" x="514" y="8" width="78" height="42"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                            <color key="textColor" red="1" green="0.1547217447099366" blue="0.22513498727147285" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="rW3-Bo-R5m" firstAttribute="top" secondItem="LOe-UT-V9g" secondAttribute="topMargin" constant="1" id="471-O1-X8x"/>
+                                        <constraint firstItem="QUj-xi-VHf" firstAttribute="trailing" secondItem="LOe-UT-V9g" secondAttribute="trailingMargin" id="B8c-iQ-b44"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="QUj-xi-VHf" secondAttribute="bottom" constant="5" id="QO2-nW-UJf"/>
                                         <constraint firstItem="rW3-Bo-R5m" firstAttribute="leading" secondItem="LOe-UT-V9g" secondAttribute="leadingMargin" id="Qk1-QR-TAY"/>
-                                        <constraint firstItem="rW3-Bo-R5m" firstAttribute="trailing" secondItem="LOe-UT-V9g" secondAttribute="trailingMargin" id="ae6-tI-ucr"/>
+                                        <constraint firstItem="QUj-xi-VHf" firstAttribute="top" secondItem="LOe-UT-V9g" secondAttribute="topMargin" id="dq4-YX-yh9"/>
+                                        <constraint firstItem="nT9-1u-JUn" firstAttribute="top" secondItem="rW3-Bo-R5m" secondAttribute="bottom" constant="-2" id="l9n-WX-li0"/>
+                                        <constraint firstItem="nT9-1u-JUn" firstAttribute="leading" secondItem="LOe-UT-V9g" secondAttribute="leadingMargin" id="lwL-kt-PCA"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="nameLabel" destination="rW3-Bo-R5m" id="bs6-vk-TQc"/>
+                                    <outlet property="priceLabel" destination="QUj-xi-VHf" id="AzO-lD-aM8"/>
+                                    <outlet property="ratingsCountLabel" destination="nT9-1u-JUn" id="kTF-dT-CV1"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
