--- a/App Search with Google/Base.lproj/Main.storyboard
+++ b/App Search with Google/Base.lproj/Main.storyboard
@@ -37,23 +37,23 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7EJ-KG-0jq" id="LOe-UT-V9g">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rW3-Bo-R5m">
-                                            <rect key="frame" x="8" y="10" width="498" height="21"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" relation="lessThanOrEqual" constant="498" id="xDA-Xz-1G4"/>
-                                            </constraints>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rW3-Bo-R5m">
+                                            <rect key="frame" x="8" y="9" width="529" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="25469 ratings" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nT9-1u-JUn">
-                                            <rect key="frame" x="8" y="29" width="76" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25469 ratings" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nT9-1u-JUn">
+                                            <rect key="frame" x="10" y="35" width="76" height="15"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="$4.99" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QUj-xi-VHf">
-                                            <rect key="frame" x="514" y="8" width="78" height="42"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="$4.99" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="QUj-xi-VHf">
+                                            <rect key="frame" x="547" y="8" width="45" height="42"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="45" id="YUr-NY-qhj"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                             <color key="textColor" red="1" green="0.1547217447099366" blue="0.22513498727147285" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -64,9 +64,10 @@
                                         <constraint firstItem="QUj-xi-VHf" firstAttribute="trailing" secondItem="LOe-UT-V9g" secondAttribute="trailingMargin" id="B8c-iQ-b44"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="QUj-xi-VHf" secondAttribute="bottom" constant="5" id="QO2-nW-UJf"/>
                                         <constraint firstItem="rW3-Bo-R5m" firstAttribute="leading" secondItem="LOe-UT-V9g" secondAttribute="leadingMargin" id="Qk1-QR-TAY"/>
+                                        <constraint firstItem="QUj-xi-VHf" firstAttribute="leading" secondItem="rW3-Bo-R5m" secondAttribute="trailing" constant="10" id="VwG-mO-baf"/>
                                         <constraint firstItem="QUj-xi-VHf" firstAttribute="top" secondItem="LOe-UT-V9g" secondAttribute="topMargin" id="dq4-YX-yh9"/>
-                                        <constraint firstItem="nT9-1u-JUn" firstAttribute="top" secondItem="rW3-Bo-R5m" secondAttribute="bottom" constant="-2" id="l9n-WX-li0"/>
-                                        <constraint firstItem="nT9-1u-JUn" firstAttribute="leading" secondItem="LOe-UT-V9g" secondAttribute="leadingMargin" id="lwL-kt-PCA"/>
+                                        <constraint firstItem="nT9-1u-JUn" firstAttribute="top" secondItem="rW3-Bo-R5m" secondAttribute="bottom" constant="5" id="l9n-WX-li0"/>
+                                        <constraint firstItem="nT9-1u-JUn" firstAttribute="leading" secondItem="LOe-UT-V9g" secondAttribute="leadingMargin" constant="2" id="lwL-kt-PCA"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
